logs/test_build.log
======================================== 
Test build started 06/09/2025 13:14:38,66 
OK: test_cpu compiled at 06/09/2025 13:14:39,50 
OK: test_mmu compiled at 06/09/2025 13:14:39,95 
OK: test_ppu compiled at 06/09/2025 13:14:40,26 
OK: test_timer compiled at 06/09/2025 13:14:40,57 
OK: test_interrupt compiled at 06/09/2025 13:14:41,49 
OK: test_joypad compiled at 06/09/2025 13:14:41,76 
Test build ended 06/09/2025 13:14:46,54 
======================================== 
======================================== 
Test build started 06/09/2025 13:33:29,22 
OK: test_cpu compiled at 06/09/2025 13:33:30,13 
OK: test_mmu compiled at 06/09/2025 13:33:30,58 
OK: test_ppu compiled at 06/09/2025 13:33:30,89 
OK: test_timer compiled at 06/09/2025 13:33:31,19 
OK: test_interrupt compiled at 06/09/2025 13:33:32,14 
OK: test_joypad compiled at 06/09/2025 13:33:32,45 
Test build ended 06/09/2025 13:33:36,32 
======================================== 
======================================== 
Test build started 06/09/2025 13:38:27,12 
OK: test_cpu compiled at 06/09/2025 13:38:28,07 
OK: test_mmu compiled at 06/09/2025 13:38:28,55 
OK: test_ppu compiled at 06/09/2025 13:38:28,84 
OK: test_timer compiled at 06/09/2025 13:38:29,18 
OK: test_interrupt compiled at 06/09/2025 13:38:30,17 
OK: test_joypad compiled at 06/09/2025 13:38:30,50 
Test build ended 06/09/2025 13:38:34,68 
======================================== 
======================================== 
Test build started 06/09/2025 13:40:01,98 
OK: test_cpu compiled at 06/09/2025 13:40:02,85 
OK: test_mmu compiled at 06/09/2025 13:40:03,30 
OK: test_ppu compiled at 06/09/2025 13:40:03,61 
OK: test_timer compiled at 06/09/2025 13:40:03,89 
OK: test_interrupt compiled at 06/09/2025 13:40:05,01 
OK: test_joypad compiled at 06/09/2025 13:40:05,30 
Test build ended 06/09/2025 13:40:08,36 
======================================== 
======================================== 
Test build started 06/09/2025 13:46:41,71 
OK: test_cpu compiled at 06/09/2025 13:46:42,68 
OK: test_mmu compiled at 06/09/2025 13:46:43,21 
OK: test_ppu compiled at 06/09/2025 13:46:43,52 
OK: test_timer compiled at 06/09/2025 13:46:43,80 
OK: test_interrupt compiled at 06/09/2025 13:46:44,73 
OK: test_joypad compiled at 06/09/2025 13:46:45,02 
Test build ended 06/09/2025 13:46:48,29 
======================================== 
======================================== 
Test build started 06/09/2025 13:49:28,91 
OK: test_cpu compiled at 06/09/2025 13:49:29,78 
OK: test_mmu compiled at 06/09/2025 13:49:30,24 
OK: test_ppu compiled at 06/09/2025 13:49:30,52 
OK: test_timer compiled at 06/09/2025 13:49:30,83 
OK: test_interrupt compiled at 06/09/2025 13:49:31,73 
OK: test_joypad compiled at 06/09/2025 13:49:32,02 
Test build ended 06/09/2025 13:49:35,12 
======================================== 
======================================== 
Test build started 06/09/2025 13:57:29,75 
OK: test_cpu compiled at 06/09/2025 13:57:30,65 
OK: test_mmu compiled at 06/09/2025 13:57:31,12 
OK: test_ppu compiled at 06/09/2025 13:57:31,43 
OK: test_timer compiled at 06/09/2025 13:57:31,72 
OK: test_interrupt compiled at 06/09/2025 13:57:32,64 
OK: test_joypad compiled at 06/09/2025 13:57:32,92 
Test build ended 06/09/2025 13:57:35,17 
======================================== 
======================================== 
Test build started 06/09/2025 13:59:05,32 
OK: test_cpu compiled at 06/09/2025 13:59:06,26 
OK: test_mmu compiled at 06/09/2025 13:59:06,73 
OK: test_ppu compiled at 06/09/2025 13:59:07,03 
OK: test_timer compiled at 06/09/2025 13:59:07,31 
OK: test_interrupt compiled at 06/09/2025 13:59:08,22 
OK: test_joypad compiled at 06/09/2025 13:59:08,52 
Test build ended 06/09/2025 13:59:10,71 
======================================== 
======================================== 
Test build started 06/09/2025 14:00:40,68 
OK: test_cpu compiled at 06/09/2025 14:00:41,58 
OK: test_mmu compiled at 06/09/2025 14:00:42,07 
OK: test_ppu compiled at 06/09/2025 14:00:42,40 
OK: test_timer compiled at 06/09/2025 14:00:42,70 
OK: test_interrupt compiled at 06/09/2025 14:00:43,62 
OK: test_joypad compiled at 06/09/2025 14:00:43,90 
Test build ended 06/09/2025 14:00:46,09 
======================================== 
======================================== 
Test build started 06/09/2025 14:08:05,90 
OK: test_cpu compiled at 06/09/2025 14:08:06,80 
OK: test_mmu compiled at 06/09/2025 14:08:07,28 
OK: test_ppu compiled at 06/09/2025 14:08:07,59 
OK: test_timer compiled at 06/09/2025 14:08:07,88 
OK: test_interrupt compiled at 06/09/2025 14:08:08,80 
OK: test_joypad compiled at 06/09/2025 14:08:09,09 
Test build ended 06/09/2025 14:08:11,64 
======================================== 
======================================== 
Test build started 06/09/2025 14:13:36,78 
OK: test_cpu compiled at 06/09/2025 14:13:37,69 
OK: test_mmu compiled at 06/09/2025 14:13:38,14 
OK: test_ppu compiled at 06/09/2025 14:13:38,45 
OK: test_timer compiled at 06/09/2025 14:13:38,73 
OK: test_interrupt compiled at 06/09/2025 14:13:39,66 
In file included from tests\unit\test_joypad.c:12:
tests\unit\test_joypad.c: In function 'test_joypad_init':
tests\unit\test_joypad.c:87:19: error: 'Joypad' has no member named 'buttons'; did you mean 'buttons_btn'?
   87 |     assert(joypad.buttons == 0xFF); // Tous les boutons relâchés
      |                   ^~~~~~~
tests\unit\test_joypad.c: In function 'test_joypad_reset':
tests\unit\test_joypad.c:98:12: error: 'Joypad' has no member named 'buttons'; did you mean 'buttons_btn'?
   98 |     joypad.buttons = 0x00;
      |            ^~~~~~~
      |            buttons_btn
In file included from tests\unit\test_joypad.c:12:
tests\unit\test_joypad.c:106:19: error: 'Joypad' has no member named 'buttons'; did you mean 'buttons_btn'?
  106 |     assert(joypad.buttons == 0xFF);
      |                   ^~~~~~~
FAIL: test_joypad compilation at 06/09/2025 14:13:39,81 
Test build ended 06/09/2025 14:13:42,11 
======================================== 
======================================== 
Test build started 06/09/2025 14:14:57,69 
OK: test_cpu compiled at 06/09/2025 14:14:58,54 
OK: test_mmu compiled at 06/09/2025 14:14:59,00 
OK: test_ppu compiled at 06/09/2025 14:14:59,32 
OK: test_timer compiled at 06/09/2025 14:14:59,61 
OK: test_interrupt compiled at 06/09/2025 14:15:00,56 
OK: test_joypad compiled at 06/09/2025 14:15:00,85 
Test build ended 06/09/2025 14:15:03,08 
======================================== 
======================================== 
Test build started 06/09/2025 14:15:56,82 
OK: test_cpu compiled at 06/09/2025 14:15:57,71 
OK: test_mmu compiled at 06/09/2025 14:15:58,16 
OK: test_ppu compiled at 06/09/2025 14:15:58,46 
OK: test_timer compiled at 06/09/2025 14:15:58,77 
OK: test_interrupt compiled at 06/09/2025 14:15:59,72 
OK: test_joypad compiled at 06/09/2025 14:16:00,00 
Test build ended 06/09/2025 14:16:02,25 
======================================== 
======================================== 
Test build started 06/09/2025 14:23:44,77 
OK: test_cpu compiled at 06/09/2025 14:23:45,67 
OK: test_mmu compiled at 06/09/2025 14:23:46,16 
OK: test_ppu compiled at 06/09/2025 14:23:46,46 
======================================== 
Test build started 06/09/2025 14:25:59,11 
OK: test_cpu compiled at 06/09/2025 14:26:00,02 
OK: test_mmu compiled at 06/09/2025 14:26:00,49 
OK: test_ppu compiled at 06/09/2025 14:26:00,81 
OK: test_timer compiled at 06/09/2025 14:26:01,12 
OK: test_interrupt compiled at 06/09/2025 14:26:02,03 
OK: test_joypad compiled at 06/09/2025 14:26:02,31 
Test build ended 06/09/2025 14:26:04,62 
======================================== 
======================================== 
Test build started 06/09/2025 14:33:00,15 
OK: test_cpu compiled at 06/09/2025 14:33:01,01 
OK: test_mmu compiled at 06/09/2025 14:33:01,50 
OK: test_ppu compiled at 06/09/2025 14:33:01,81 
OK: test_timer compiled at 06/09/2025 14:33:02,11 
OK: test_interrupt compiled at 06/09/2025 14:33:03,03 
OK: test_joypad compiled at 06/09/2025 14:33:03,31 
Test build ended 06/09/2025 14:33:05,57 
======================================== 
======================================== 
Test build started 06/09/2025 14:46:03,66 
OK: test_cpu compiled at 06/09/2025 14:46:04,56 
OK: test_mmu compiled at 06/09/2025 14:46:05,03 
OK: test_ppu compiled at 06/09/2025 14:46:05,33 
OK: test_timer compiled at 06/09/2025 14:46:05,70 
OK: test_interrupt compiled at 06/09/2025 14:46:06,74 
OK: test_joypad compiled at 06/09/2025 14:46:07,03 
Test build ended 06/09/2025 14:46:08,57 
======================================== 
======================================== 
Test build started 06/09/2025 14:47:50,14 
OK: test_cpu compiled at 06/09/2025 14:47:51,14 
OK: test_mmu compiled at 06/09/2025 14:47:51,60 
OK: test_ppu compiled at 06/09/2025 14:47:51,90 
OK: test_timer compiled at 06/09/2025 14:47:52,20 
OK: test_interrupt compiled at 06/09/2025 14:47:53,13 
OK: test_joypad compiled at 06/09/2025 14:47:53,43 
Test build ended 06/09/2025 14:47:54,93 
======================================== 
